--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
         "nth-check": "2.0.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-icons": "^5.5.0",
         "react-svg-core": "3.0.3",
         "react-toastify": "^9.1.3",
         "typescript": "^4.6.3"
