--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
         "nx": "19.8.4",
         "postcss": "^8.4.24",
         "prettier": "^3.0.0",
+        "raw-loader": "^4.0.2",
         "storybook": "^8.3.5",
         "stylelint": "^13.13.1",
         "stylelint-config-prettier": "^8.0.2",
@@ -64,7 +65,9 @@
         "stylelint-no-unsupported-browser-features": "^4.0.0",
         "stylelint-selector-bem-pattern": "^2.1.0",
         "stylelint-webpack-plugin": "^2.1.1",
-        "ts-jest": "^29.2.5"
+        "ts-jest": "^29.2.5",
+        "webpack": "^5.99.9",
+        "webpack-cli": "^6.0.1"
     },
     "scripts": {
         "analyze:build": "nx run-many --target=analyze:build",
